--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,7 @@ REACT_APP_API_URL=http://localhost:5000/api/
 
 
 # Database Configuration
-MONGODB_URI=mongodb+srv://963sohamraut:tiIJDdXD8oSGbrfD@game.h39d7ua.mongodb.net/numbergame?retryWrites=true&w=majority&appName=Game
+MONGODB_URI=mongodb+srv://abharshcd_db_user:nX4VTX2SxFHxBmL5@cluster0.tmdhtdd.mongodb.net/
 
 MONGODB_LOCAL=mongodb://localhost:27017/numbergame
 
