--- a/package.json
+++ b/package.json
@@ -44,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "engines": {
+  "node": "18.x",
+  "npm": "9.x"
+}
+
 }
