--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
   "engines": {
     "node": "22.x",
     "npm": ">=9.x"
+  },
+  "devDependencies": {
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0"
   }
 }
