--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
