--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
-  "build": {
-    "env": {
-      "NODE_VERSION": "18"
-    }
-  }
+  "builds": [
+    { "src": "package.json", "use": "@vercel/static-build" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
+  ],
+  "env": {
+    "NODE_VERSION": "18"
+  },
+  "outputDirectory": "build"
 }
